--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ html {
 }
 .navbar.sticky {
   padding: 2px 0;
-  background-color: crimson;
+  background-color: blueviolet;
 }
 .max-width {
   max-width: 1300px;
@@ -44,7 +44,7 @@ html {
 }
 
 .navbar .logo a span {
-  color: crimson;
+  color: blueviolet;
 }
 .navbar.sticky .logo a span {
   color: white;
@@ -66,7 +66,7 @@ html {
   transition: color 0.3s ease;
 }
 .navbar .menu li a:hover {
-  color: crimson;
+  color: blueviolet;
 }
 .navbar.sticky .menu li a:hover {
   color: #000;
@@ -85,7 +85,7 @@ html {
   position: fixed;
   height: 50px;
   width: 47px;
-  background: crimson;
+  background: blueviolet;
   right: 30px;
   bottom: 10px;
   text-align: center;
@@ -142,17 +142,17 @@ html {
 }
 .home .home-content .text-3 span {
   font-weight: 500;
-  color: crimson;
+  color: blueviolet;
 }
 .home .home-content a {
   display: inline-block;
-  background: crimson;
+  background: blueviolet;
   color: #fff;
   font-size: 25px;
   padding: 8px 20px;
   margin-top: 20px;
   border-radius: 6px;
-  border: 2px solid crimson;
+  border: 2px solid blueviolet;
   transition: all 0.3s ease;
 }
 .home .home-content .web {
@@ -208,7 +208,7 @@ section .title::after {
   left: 50%;
   padding: 5px;
   font-size: 20px;
-  color: crimson;
+  color: blueviolet;
   background: #fff;
   transform: translateX(-50%);
 }
@@ -294,7 +294,7 @@ section .title::after {
 .button1 .icon i {
   font-size: 18px;
   line-height: 45px;
-  color: crimson;
+  color: blueviolet;
   transition: all 0.3s ease-in-out;
 }
 .button1:hover {
